# titanic_prediction

./: README.md  data_exploration.py  feature_selection.py  model_exploration.py  pyproject.toml
classes/: categorical_mapper.py  feature.py  feature_type.py  model_data.py
data_manipulation/: data_cleaning.py  data_imputation.py  engineered_features.py  feature_selection.py  settings.py  titanic_features.py
models/: decision_tree.py  feature.py  log_regression.py  ml_model.py  random_forest.py  svm.py
